--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,33 +14,38 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Lint
         id: lint
-        run: npm run lint
+        run: pnpm run lint
         continue-on-error: true
 
       - name: Tests
         id: tests
-        run: npm test
+        run: pnpm test
         continue-on-error: true
 
       - name: Build
         id: build
-        run: npm run build
+        run: pnpm run build
         continue-on-error: true
 
       - name: Security audit
         id: security
-        run: npm audit --audit-level=moderate
+        run: pnpm audit --audit-level=moderate
         continue-on-error: true
 
       - name: Summary
