init with next.js

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
 name: Quality Checks
 
 on:
-  pull_request:
+  push:
     branches:
       - develop
-      - main
 
 jobs:
   quality:
@@ -31,11 +30,6 @@ jobs:
       - name: Lint
         id: lint
         run: pnpm run lint
-        continue-on-error: true
-
-      - name: Tests
-        id: tests
-        run: pnpm test
         continue-on-error: true
 
       - name: Build
