--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,21 +20,26 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build Next.js project
-        run: npm run build
+        run: pnpm run build
 
       - name: Install semantic-release
         run: |
-          npm install -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec @semantic-release/github
+          pnpm add -g semantic-release @semantic-release/git @semantic-release/changelog @semantic-release/exec @semantic-release/github
 
       - name: Release
         env:
@@ -43,4 +48,4 @@ jobs:
           GIT_AUTHOR_EMAIL: noreply@project.com
           GIT_COMMITTER_NAME: Release Bot
           GIT_COMMITTER_EMAIL: noreply@project.com
-        run: npx semantic-release
+        run: pnpm exec semantic-release
