--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tanstack/react-devtools": "^0.9.3",
     "@tanstack/react-form": "^1.28.0",
-    "@tanstack/react-form-devtools": "^0.2.13",
-    "@tanstack/react-query": "^5.90.20",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,6 +23,7 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
